--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,53 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>MavenUI</groupId>
   <artifactId>MavenUI</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <version>1.0-SNAPSHOT</version>
+  <name>mywebapp Maven Webapp</name>
+  <url>http://maven.apache.org</url>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+  <build>
+    <finalName>MavenUI</finalName>
+     <pluginManagement>
+       <plugins>
+         <plugin>
+           <artifactId>maven-clean-plugin</artifactId>
+           <version>3.1.0</version>
+         </plugin>
+         <plugin>
+           <artifactId>maven-resources-plugin</artifactId>
+           <version>3.0.2</version>
+         </plugin>
+         <plugin>
+           <artifactId>maven-compiler-plugin</artifactId>
+           <version>3.8.0</version>
+         </plugin>
+	 <plugin>
+	    <artifactId>maven-surefire-plugin</artifactId>
+	    <version>2.22.1</version>
+	 </plugin>
+	 <plugin>
+	     <artifactId>maven-war-plugin</artifactId>
+	     <version>3.2.2</version>
+	 </plugin>
+	 <plugin>
+	     <artifactId>maven-install-plugin</artifactId>
+	     <version>2.5.2</version>
+	 </plugin>
+	 <plugin>
+	     <artifactId>maven-deploy-plugin</artifactId>
+	     <version>2.8.2</version>
+	 </plugin>
+     </plugins>
+  </pluginManagement>
+  </build>
 </project>
